src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__agent_graph__agent_graph_ascii_fallback_spinner_running_node.snap
---
source: src/tui/snapshot_tests/agent_graph.rs
expression: t.backend()
---
"┌ agent graph ─────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                       ████                               ████                                        │"
"│                                        login.rs                          ██config.rs                                 │"
"│                                             ███                         █                                            │"
"│                                                ██████                  █                                             │"
"│                                                  ████                ██                                              │"
"│                                                  █| #102            █                                                │"
"│                                                  █   █ ███        ██                                                 │"
"│                                                 █     █   ███    █                                                   │"
"│                                                 █      ██    ██ █                                                    │"
"│                                                █         █    ████                                                   │"
"│                                               █           ██ █    ███                                                │"
"│                                               █             █        ███                                             │"
"│                                              █            ██ █    ███ | #101                                         │"
"│                                              █           █    ████                                                   │"
"│                                             █          ██    ██ █                                                    │"
"│                                            █          █   ███    █                                                   │"
"│                                            █         █ ███        ██                                                 │"
"│                                           █        ████             █                                                │"
"│                                          █       ████                ██                                              │"
"│                                          █     ██████                  █                                             │"
"│                                         █   ███   #103                  █                                            │"
"│                                         ████                             ██                                          │"
"│                                       ████                               ████                                        │"
"│                                                                                                                      │"
"│                                        token.rs                            dashboard.rs                              │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
