src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__agent_graph__agent_graph_completed_flash_tick4_bold_reversed.snap
---
source: src/tui/snapshot_tests/agent_graph.rs
expression: t.backend()
---
"┌ agent graph ─────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                      config.rs                                                       │"
"│                                                          ⠈⢆                                                          │"
"│                                                           ⠘⡄                                                         │"
"│                                                            ⠸⡀                                                        │"
"│                                                             ⢱                                                        │"
"│                                                              ⢣                                                       │"
"│                                                               ⢇                                                      │"
"│                                                               ⠈⡆                                                     │"
"│                                                                ⠘⡄                                                    │"
"│                                                                 ⠱⡀                                                   │"
"│                                                                  ⢣                                                   │"
"│                                                                   ⢇                                                  │"
"│                                      ⠋ #101                       ⠈⡆                                                 │"
"│                                            ██                      ⠘⡄                                                │"
"│                                                                       ██                                             │"
"│                                           ████                       ████                                            │"
"│                                          █●██●█                     █●██●█                                           │"
"│                                          ██████                     ██████                                           │"
"│                                          ██████                     ██████                                           │"
"│                                          █ ██ █⡀                    █ ██ █                                           │"
"│                                                ⢱                      #103                                           │"
"│                                                 ⢣                                                                    │"
"│                                                  ⢇                                                                   │"
"│                                                  ⠈⡆                                                                  │"
"│                                                   ⠘⡄                                                                 │"
"│                                                    ⠱⡀                                                                │"
"│                                                     ⢣                                                                │"
"│                                                      ⢇                                                               │"
"│                                                      ⠈⡆                                                              │"
"│                                                       ⠘⡄                                                             │"
"│                                                        ⠸⡀                                                            │"
"│                                                         ⢱                                                            │"
"│                                                       auth.rs                                                        │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
