src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__agent_graph__agent_graph_edge_pulse_tooluse_tick0.snap
---
source: src/tui/snapshot_tests/agent_graph.rs
expression: t.backend()
---
"┌ agent graph ─────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                         ⢰⢒⢲                                                          │"
"│                                                         ⠈⠉⢏                                                          │"
"│                                                       auth.rs                                                        │"
"│                                                            ⠸⡀                                                        │"
"│                                                             ⢱                                                        │"
"│                                                              ⢣                                                       │"
"│                                                               ⢇                                                      │"
"│                                                               ⠈⡆                                                     │"
"│                                                                ⠘⡄                                                    │"
"│                                     ⠋ #102                      ⠱⡀                                                   │"
"│                                                                  ⢣                                                   │"
"│                                          ██                         ██                                               │"
"│                                                                   ⠈⡆                                                 │"
"│                                         ████                       ████                                              │"
"│                                                                     ⠸⡀                                               │"
"│                                        █●██●█                     █●██●█                                             │"
"│                                             ⢀                         ⢣                                              │"
"│                                        ██████⢆                    ██████                                             │"
"│                                              ⠘⡄                                                                      │"
"│                                        ██████ ⠸⡀                  ██████                                             │"
"│                                                ⢱                                                                     │"
"│                                        █ ██ █   ⢣                 █ ██ █                                             │"
"│                                                  ⢇                                                                   │"
"│                                                  ⠈⡆                   ⠋ #101                                         │"
"│                                                   ⠘⡄                                                                 │"
"│                                                    ⠱⡀                                                                │"
"│                                                     ⢣                                                                │"
"│                                                      ⢇                                                               │"
"│                                                      ⠈⡆                                                              │"
"│                                                       ⠘⡄                                                             │"
"│                                                        ⠸⡀                                                            │"
"│                                                         ⢱                                                            │"
"│                                                         ⢠⢧⢤                                                          │"
"│                                                    dashboard.rs                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
