src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__agent_graph__agent_graph_empty_state_single_agent_no_files_is_live.snap
---
source: src/tui/snapshot_tests/agent_graph.rs
expression: t.backend()
---
"┌ agent graph ─────────────────────────────────────────────────────────────────┐"
"│                                       |                                      │"
"│                                     [IMP]                                    │"
"│                                 #201  RUNNING                                │"
"│                                                                              │"
"│              | Phase: waiting for output  ·  Waiting for output              │"
"│                          Waiting for first file edit                         │"
"│                                                                              │"
"│Recent activity                                                               │"
"│Waiting for first event from the agent                                        │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
