src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__agent_graph__agent_graph_empty_state_uses_braille_spinner_and_activity.snap
---
source: src/tui/snapshot_tests/agent_graph.rs
expression: t.backend()
---
"┌ agent graph ─────────────────────────────────────────────────────────────────┐"
"│                                       ⠋                                      │"
"│                                      ██                                      │"
"│                                     ████                                     │"
"│                                    █●██●█                                    │"
"│                                    ██████                                    │"
"│                                    ██████                                    │"
"│                                    █ ██ █                                    │"
"│                                 #201  RUNNING                                │"
"│                       ⠋ Phase: thinking  ·  Thinking...                      │"
"│                          Waiting for first file edit                         │"
"│                                                                              │"
"│Recent activity                                                               │"
"│10:00:00 Session spawned (pid: 4242)                                          │"
"│10:00:00 Thinking...                                                          │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
