src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__agent_graph__agent_graph_renders_at_100x30.snap
---
source: src/tui/snapshot_tests/agent_graph.rs
expression: t.backend()
---
"┌ agent graph ─────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                          login.rs█                            config.rs                          │"
"│                                   [IMP] | #102              ██                                   │"
"│                                      ███████               █                                     │"
"│                                          ███             ██                                      │"
"│                                          █ ████         █                                        │"
"│                                         █    █ ███    ██                                         │"
"│                                         █     ██  ████                                           │"
"│                                        █        █  ██ ███                                        │"
"│                                       █          ██      ███[IMP] | #101                         │"
"│                                      █          █  ██ ███                                        │"
"│                                      █        ██  ████                                           │"
"│                                     █        █ ███    ██                                         │"
"│                                    █       ████         █                                        │"
"│                                   █      ███             ██                                      │"
"│                                   █  ███████               █                                     │"
"│                                  [IMP] #103                 ██                                   │"
"│                          token.rs█                            dashboard.rs                       │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
